clusters/apps/env/home-automation/kube-system/ingressroute.hubble.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: hubble
  annotations:
    kubernetes.io/ingress.class: "traefik-external"
    external-dns.alpha.kubernetes.io/hostname: hubble.${FAMILY_DOMAIN}
    external-dns.alpha.kubernetes.io/target: ${DYNAMIC_DOMAIN}
    external-dns/public: "true"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`hubble.${FAMILY_DOMAIN}`)"
      priority: 10
      middlewares:
        - name: ak-outpost-authentik-embedded-outpost
          namespace: auth-system
      services:
        - name: hubble-ui
          port: 80
    - kind: Rule
      match: "Host(`hubble.${FAMILY_DOMAIN}`) && PathPrefix(`/outpost.goauthentik.io/`)"
      priority: 15
      services:
        - kind: Service
          name: ak-outpost-authentik-embedded-outpost
          namespace: auth-system
          port: 9000
  tls:
    secretName: heyjohn-wildcard-certificate
    domains:
      - main: hubble.${FAMILY_DOMAIN}
